--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -76,8 +76,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/prompt_last_name"
                         android:inputType="textPersonName"
-                        android:maxLines="1"
-                        android:nextFocusDown="@+id/company_name" />
+                        android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
 
