Profile View Page (#26)
* Implement Profile View Page

Partially Resolves Issue #18.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
+    <dimen name="toolbar_elevation">8dp</dimen>
 </resources>
