--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,17 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
-    <dimen name="toolbar_elevation">8dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="fab_pressed_elevation">12dp</dimen>
+    <dimen name="list_item_padding_top">12dp</dimen>
+    <dimen name="avatar_size">100dp</dimen>
+    <dimen name="speaker_avatar_size">40dp</dimen>
+    <dimen name="drawable_padding">4dp</dimen>
+    <dimen name="button_elevation">2dp</dimen>
+    <dimen name="button_margin_top">20dp</dimen>
+    <dimen name="tab_max_width">150dp</dimen>
+    <dimen name="tab_min_width">100dp</dimen>
+    <dimen name="logo_size">150dp</dimen>
+    <dimen name="fb_button_margin">30dp</dimen>
 </resources>
