--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:elevation="4dp"
+        android:elevation="@dimen/toolbar_elevation"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ToolbarTheme">
 
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@color/colorPrimaryDark"
-                    android:elevation="2dp"
+                    android:elevation="@dimen/button_elevation"
                     android:text="@string/action_register"
                     android:textColor="@android:color/white"
                     android:textStyle="bold" />
