--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,8 +33,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/content_margin"
-                android:drawableLeft="@drawable/ic_place_grey600_24dp"
-                android:drawableStart="@drawable/ic_place_grey600_24dp"
                 android:saveEnabled="false"
                 android:text="@string/location"
                 tools:text="Janson (Building J)" />
@@ -45,8 +43,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:drawableLeft="@drawable/ic_access_time_grey600_24dp"
-                android:drawableStart="@drawable/ic_access_time_grey600_24dp"
                 android:text="@string/time"
                 tools:text="Day 1 (Saturday), 09:30 - 09:55" />
 
@@ -56,8 +52,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:drawableLeft="@drawable/ic_people_grey600_24dp"
-                android:drawableStart="@drawable/ic_people_grey600_24dp"
                 android:saveEnabled="false"
                 android:text="@string/audience"
                 tools:text="Beginner/Intermediate" />
@@ -103,5 +97,5 @@
 
 
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
 
