--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -24,8 +24,8 @@
             app:tabBackground="?attr/selectableItemBackground"
             app:tabGravity="center"
             app:tabIndicatorHeight="3dp"
-            app:tabMaxWidth="150dp"
-            app:tabMinWidth="100dp"
+            app:tabMaxWidth="@dimen/tab_max_width"
+            app:tabMinWidth="@dimen/tab_min_width"
             app:tabMode="scrollable"
             app:tabSelectedTextColor="@android:color/black"
             app:tabTextColor="#4c4c4c"
