--- a/app/src/main/res/layout/recycler_view_header.xml
+++ b/app/src/main/res/layout/recycler_view_header.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:background="#f5f5f5"
         android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="12dp"
+        android:paddingBottom="@dimen/list_item_padding"
+        android:paddingLeft="@dimen/list_item_padding"
+        android:paddingRight="@dimen/list_item_padding"
+        android:paddingTop="@dimen/list_item_padding_top"
         android:textColor="@android:color/black"
         android:textSize="14sp" />
 
