--- a/app/src/main/res/layout/speaker_list_item.xml
+++ b/app/src/main/res/layout/speaker_list_item.xml
@@ -11,8 +11,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/list_item_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/speaker_avatar_size"
+        android:layout_height="@dimen/speaker_avatar_size"
         android:src="@drawable/anita_borg_logo" />
 
     <LinearLayout
