--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#F8D44C</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="black_semi_transparent">#B2000000</color>
+    <color name="button_background">#efefef</color>
+    <color name="google_plus_color">#dd4b39</color>
+    <color name="facebook_color">#3b5998</color>
 </resources>
