--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="text_size_14sp">14sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="content_margin">16dp</dimen>
@@ -21,4 +22,17 @@
     <dimen name="tab_min_width">100dp</dimen>
     <dimen name="logo_size">150dp</dimen>
     <dimen name="fb_button_margin">30dp</dimen>
+    <dimen name="signin_button_height">50dp</dimen>
+    <dimen name="margin_top_10dp">10dp</dimen>
+    <dimen name="margin_bottom_20dp">20dp</dimen>
+    <dimen name="margin_left_43dp">43dp</dimen>
+    <dimen name="margin_right_43dp">43dp</dimen>
+    <dimen name="margin_bottom_10dp">10dp</dimen>
+    <dimen name="margin_left_40dp">40dp</dimen>
+    <dimen name="margin_right_40dp">40dp</dimen>
+    <dimen name="drawable_padding_45dp">45dp</dimen>
+    <dimen name="padding_top_13dp">13dp</dimen>
+    <dimen name="padding_bottom_13dp">13dp</dimen>
+    <dimen name="padding_left_14dp">14dp</dimen>
+    <dimen name="padding_right_14dp">14dp</dimen>
 </resources>
