--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,4 +48,29 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="FacebookLoginButton">
+        <item name="android:layout_marginTop">@dimen/margin_top_10dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_bottom_20dp</item>
+        <item name="android:layout_marginLeft">@dimen/margin_left_43dp</item>
+        <item name="android:layout_marginRight">@dimen/margin_right_43dp</item>
+        <item name="android:drawablePadding">@dimen/drawable_padding_45dp</item>
+        <item name="android:paddingBottom">@dimen/padding_bottom_13dp</item>
+        <item name="android:paddingLeft">@dimen/padding_left_14dp</item>
+        <item name="android:paddingRight">@dimen/padding_right_14dp</item>
+        <item name="android:paddingTop">@dimen/padding_top_13dp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="GoogleLoginButton">
+        <item name="android:layout_marginBottom">@dimen/margin_bottom_10dp</item>
+        <item name="android:layout_marginLeft">@dimen/margin_left_40dp</item>
+        <item name="android:layout_marginRight">@dimen/margin_right_40dp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/grey_500</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
 </resources>
